[package]
name = "freezable-macros"
version = "0.3.2"
edition = "2024"
license = "Unlicense"
authors = ["Jack Hamilton jackham800@gmail.com"]
keywords = []
categories = []
repository = "https://github.com/jackhamilton/freezable-macros"
description = "Support proc macro for the freezable package"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
